tests/integration/fail/array_contract_num_is_not_an_array.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::BlameError'
1 | Array Dyn